<package>
  <name>darc_py</name>
  <version>0.2.0</version>
  <description>DARC Component Python Bindings</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>darc_component</run_depend>

  <build_depend>darc_component</build_depend>
</package>
